# lminc

./: Cargo.toml  README.md  extended_mode.md
.github/workflows/: rust-clippy.yml  rust.yml
examples/: abs_addr.txt  extended_input.rs  extended_input.txt  extended_output.rs  extended_output.txt  fib.txt  fib_num.txt  fib_test.csv  fibonacci.rs  fibonacci_from_nums.rs  save_and_load.rs  van_eck.rs  van_eck.txt
lib/: abs_addr.txt  assembler.rs  assembly.rs  computer.rs  errors.rs  fib_num.txt  lib.rs  loader.rs  num3.rs  number_assembler.rs  runner.rs
lib/file/: load.rs  mod.rs  save.rs
lib/helper/: case_insensitive.rs  mod.rs
lib/parser/: error.rs  mod.rs
lib/runner/: mod.rs  stdio.rs
lib/runner/tester/: alloc_tester.rs  mod.rs
src/: error.rs  main.rs  subcommands.rs
