[package]
name = "lminc"
version = "2.0.0"
authors = ["Tom Boddaert <lminc@tomboddaert.com>"]
edition = "2021"
description = "An assembler and interpreter for the Little Minion Computer model created by Professor Magnus Bordewich of Durham University, based on the Little Man Computer created by Dr. Stuart Madnick of M.I.T. in 1965"
readme = "README.md"
homepage = "https://github.com/tomBoddaert/lminc/"
repository = "https://github.com/tomBoddaert/lminc/"
license = "MIT OR Apache-2.0"
keywords = ["assembler", "utility", "binary", "compiler"]
categories = ["simulation", "compilers"]

[lib]
name = "lminc"
path = "lib/lib.rs"
doc = true
edition = "2021"
crate-type = ["lib"]

[features]
default = ["std", "extended"]
alloc = []
std = ["alloc"]
extended = []

[[bin]]
name = "lminc"
path = "src/main.rs"
doc = false
edition = "2021"
required-features = ["std"]

[profile.dev]
opt-level = 0
debug = 2
strip = "none"
lto = "off"
panic = "unwind"

[profile.release]
opt-level = 3
debug = 0
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1

# UUID used in tests in src/loader.rs
[dev-dependencies.uuid]
version = "1.2.1"
features = [
  "v4",
  "fast-rng"
]
